--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lastfm",
     "music-database"
   ],
-  "author": "Olivia Pagel",
+  "author": "Olivia P",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.2.1",
